# Veterinary-Online-Appointment-System

./: VetOnlineAppointmentSystem.code-workspace
backend/: .gitignore  Procfile  local.db  main.py  pyproject.toml
backend/alembic/: env.py
backend/src/: exception.py  server.py  service_seeder.py
backend/src/dtos/: appointment_dtos.py  pet_dtos.py  user_dtos.py
backend/src/models/: appointment_models.py
backend/src/routes/: appointment_route.py  client_route.py  pet_route.py  user_route.py
backend/src/services/: appointment_service.py  client_service.py  pet_service.py  user_service.py
backend/tests/: user_test.py
frontend/: package.json  pnpm-lock.yaml
frontend/src/: app.d.ts  hooks.server.ts
frontend/src/lib/api/: appointment.ts  auth.ts  client.ts  pet.ts
frontend/src/lib/components/: AuthModal.svelte  BookButton.svelte  Footer.svelte  NavBar.svelte
frontend/src/routes/: +layout.server.ts  +layout.svelte  +page.svelte  layout.css
frontend/src/routes/appointment/: +page.server.ts  +page.svelte
frontend/src/routes/auth/: +page.server.ts
frontend/src/routes/book/: +page.server.ts
frontend/src/routes/profile/: +page.server.ts  +page.svelte
frontend/src/routes/profile/components/: AppointmentList.svelte
